# github

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: workflows
.github/workflows/: Linux-Clang-ROOT-Geant4.yml  Linux-Clang.yml  Linux-GCC-ROOT-Geant4.yml  Linux-GCC.yml  MacOS-Clang-ROOT-Geant4.yml  MacOS-Clang.yml  Windows-M2sys-ROOT-Geant4.yml  Windows-M2sys.yml  Windows-MSVC-ROOT-Geant4.yml  Windows-MSVC.yml  macOS-Clang.yml  macOS.yml
tests/: CMakeLists.txt  ROOT.cpp
tests/Geant4/: CMakeLists.txt
tests/ROOT/: CMakeLists.txt  ROOT.cpp
workflow-templates/: Linux-Clang-ROOT-Geant4.properties.json  Linux-Clang-ROOT-Geant4.yml  Linux-Clang.properties.json  Linux-Clang.yml  Linux-GCC-ROOT-Geant4.properties.json  Linux-GCC-ROOT-Geant4.yml  Linux-GCC.properties.json  Linux-GCC.yml  MacOS-Clang-ROOT-Geant4.properties.json  MacOS-Clang-ROOT-Geant4.yml  MacOS-Clang.properties.json  MacOS-Clang.yml  Windows-M2sys-ROOT-Geant4.properties.json  Windows-M2sys-ROOT-Geant4.yml  Windows-M2sys.properties.json  Windows-M2sys.yml  Windows-MSVC-ROOT-Geant4.properties.json  Windows-MSVC-ROOT-Geant4.yml  Windows-MSVC.properties.json  Windows-MSVC.yml  macOS-Clang.properties.json  macOS-Clang.yml  macOS.properties.json  macOS.yml
